--- a/app/scss/pages/documents.scss
+++ b/app/scss/pages/documents.scss
@@ -35,9 +35,10 @@
     color: var(--black, #2E2D2D);
 
     &-img {
-      width: auto;
-      height: 100%;
+      width: 100%;
+      height: auto;
       object-fit: cover;
+      aspect-ratio: 210/304;
       padding: 30px 30px 16px;
       background: var(--white, #fff);
     }
@@ -95,8 +96,9 @@
 
     &-img {
       width: 100%;
-      height: 100%;
+      height: auto;
       object-fit: cover;
+      aspect-ratio: 210/304;
       padding: 30px 30px 16px;
       background: var(--white, #fff);
     }
