--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -27,5 +27,6 @@
 @import 'pages/site-map.scss';
 @import 'pages/projection.scss';
 @import 'pages/about.scss';
+@import 'pages/search.scss';
 
 @import 'media';
