--- a/app/css/style.css
+++ b/app/css/style.css
@@ -2349,7 +2349,8 @@ input[type=radio] + label::before {
 }
 .built__item-img {
   width: 100%;
-  height: auto;
+  height: 100%;
+  aspect-ratio: 1170/500;
   object-fit: cover;
 }
 .built__item-content {
@@ -2771,6 +2772,9 @@ input[type=radio] + label::before {
   height: auto;
   object-fit: cover;
 }
+.callback .agreement {
+  max-width: 100%;
+}
 
 .faq__head {
   display: flex;
@@ -2885,7 +2889,7 @@ input[type=radio] + label::before {
 .projects__img {
   border-radius: 30px;
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: cover;
 }
 .projects__content {
@@ -3739,10 +3743,12 @@ input[type=radio] + label::before {
 }
 .works__item-block {
   position: relative;
+  width: 100%;
+  height: 100%;
 }
 .works__item-img {
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: cover;
 }
 .works__item:hover .works__content-body {
@@ -4596,7 +4602,7 @@ input[type=radio] + label::before {
 }
 .documents__item-img {
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: cover;
   aspect-ratio: 210/304;
   padding: 30px 30px 16px;
@@ -4649,7 +4655,7 @@ input[type=radio] + label::before {
 }
 .licenses__item-img {
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: cover;
   aspect-ratio: 210/304;
   padding: 30px 30px 16px;
@@ -4737,10 +4743,6 @@ input[type=radio] + label::before {
   position: relative;
   margin-bottom: 30px;
 }
-.contacts__map iframe {
-  position: relative;
-  z-index: 1;
-}
 .contacts__card {
   padding: 30px;
   border-radius: 30px 0 0 30px;
@@ -4819,6 +4821,14 @@ input[type=radio] + label::before {
 .contacts__info-text:not(:first-child) {
   font-weight: 500;
   color: var(--black, #2E2D2D);
+}
+
+.map {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 1170/570;
 }
 
 .supervision-page .supervision-advantages {
@@ -5324,6 +5334,73 @@ input[type=radio] + label::before {
   bottom: 0;
   right: -30px;
   z-index: 2;
+}
+
+.search__title {
+  margin-bottom: 26px;
+}
+.search__form {
+  display: flex;
+  flex-direction: row;
+  background: var(--bg, #F9F9F9);
+  border-radius: 8px;
+  padding: 0 24px 0 0;
+  margin-bottom: 40px;
+}
+.search__input {
+  height: 50px;
+  padding: 16px 24px;
+  background: transparent;
+  width: 100%;
+}
+.search__input::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+}
+.search__label {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  color: var(--black, #2E2D2D);
+}
+.search__label-img {
+  width: 17px;
+  height: 17px;
+  object-fit: cover;
+}
+.search__label-input {
+  cursor: pointer;
+  background: transparent;
+}
+.search__items {
+  display: flex;
+  flex-direction: column;
+  gap: 26px;
+  margin-bottom: 30px;
+}
+.search__item {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+.search__item-img {
+  width: 130px;
+  height: auto;
+  object-fit: cover;
+  border-radius: 10px;
+}
+.search__item-content {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.search__item-text {
+  -webkit-line-clamp: 2;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+.search__item-link {
+  color: var(--brown, #857067);
 }
 
 @media (max-width: 1920px) {
@@ -6616,7 +6693,7 @@ input[type=radio] + label::before {
   .contacts__info-items {
     gap: 20px;
   }
-  .contacts__map iframe {
+  .map {
     height: 470px;
   }
   /* projection */
@@ -7389,7 +7466,7 @@ input[type=radio] + label::before {
     transform: none;
     bottom: 40px;
   }
-  .contacts__map iframe {
+  .map {
     height: 560px;
   }
   .about__items {
@@ -7788,6 +7865,21 @@ input[type=radio] + label::before {
   }
   .construction__item {
     width: 100%;
+  }
+  /* search page */
+  .search__form {
+    margin-bottom: 60px;
+  }
+  .search__item {
+    flex-direction: column;
+    gap: 20px;
+  }
+  .search__item-img {
+    width: 100%;
+    height: 100px;
+  }
+  .search__item-text {
+    -webkit-line-clamp: 6;
   }
 }
 @media (max-width: 560px) {
