--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1630,7 +1630,7 @@
     gap: 20px;
   }
 
-  .contacts__map iframe {
+  .map {
     height: 470px;
   }
 
@@ -2620,7 +2620,7 @@
     bottom: 40px;
   }
 
-  .contacts__map iframe {
+  .map {
     height: 560px;
   }
 
@@ -3131,6 +3131,25 @@
 
   .construction__item {
     width: 100%;
+  }
+
+  /* search page */
+  .search__form {
+    margin-bottom: 60px;
+  }
+
+  .search__item {
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .search__item-img {
+    width: 100%;
+    height: 100px;
+  }
+
+  .search__item-text {
+    -webkit-line-clamp: 6;
   }
 }
 
