--- a/app/scss/pages/contacts.scss
+++ b/app/scss/pages/contacts.scss
@@ -8,11 +8,6 @@
     overflow: hidden;
     position: relative;
     margin-bottom: 30px;
-
-    iframe {
-      position: relative;
-      z-index: 1;
-    }
   }
 
   &__card {
@@ -108,4 +103,12 @@
       }
     }
   }
+}
+
+.map {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 1170/570;
 }
