--- a/app/scss/pages/documents.scss
+++ b/app/scss/pages/documents.scss
@@ -36,7 +36,7 @@
 
     &-img {
       width: 100%;
-      height: auto;
+      height: 100%;
       object-fit: cover;
       aspect-ratio: 210/304;
       padding: 30px 30px 16px;
@@ -96,7 +96,7 @@
 
     &-img {
       width: 100%;
-      height: auto;
+      height: 100%;
       object-fit: cover;
       aspect-ratio: 210/304;
       padding: 30px 30px 16px;
