--- a/app/scss/pages/works.scss
+++ b/app/scss/pages/works.scss
@@ -15,11 +15,13 @@
 
     &-block {
       position: relative;
+      width: 100%;
+      height: 100%;
     }
 
     &-img {
       width: 100%;
-      height: auto;
+      height: 100%;
       object-fit: cover;
     }
 
