--- a/app/scss/pages/search.scss
+++ b/app/scss/pages/search.scss
@@ -56,8 +56,9 @@
 
     &-img {
       width: 130px;
-      height: auto;
+      height: 100%;
       object-fit: cover;
+      aspect-ratio: 130/106;
       border-radius: 10px;
     }
 
