--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1,13 +1,3 @@
-@media (max-width: 1920px) {
-  .advantages__img {
-    border-radius: 0 30px 30px 0;
-  }
-
-  .advantages__block:last-child .advantages__img {
-    border-radius: 30px 0 0 30px;
-  }
-}
-
 @media (max-width: 1380px) {
   .project__slider {
     max-width: 100%;
@@ -1082,7 +1072,8 @@
   }
 
   .project-video {
-    padding: 80px 0;
+    padding: 0 0 80px;
+    background: linear-gradient(to top, var(--black, #2E2D2D) calc(50% + 40px), transparent calc(50% + 40px));
   }
 
   .project-video__video iframe {
@@ -1096,14 +1087,14 @@
   .project-page .built__item-content::before {
     width: 20px;
     height: 20px;
-    background: radial-gradient(circle at right top, transparent 20px, var(--white, #fff) 20px);
+    background: radial-gradient(circle at right top, transparent 20px, var(--bg, #F9F9F9) 20px);
     top: -20px;
   }
 
   .project-page .built__item-content::after {
     width: 20px;
     height: 20px;
-    background: radial-gradient(circle at right top, transparent 20px, var(--white, #fff) 20px);
+    background: radial-gradient(circle at right top, transparent 20px, var(--bg, #F9F9F9) 20px);
     right: -20px;
   }
 
@@ -1259,7 +1250,7 @@
   }
 
   .reviews-page .callback__img {
-    height: 450px;
+    height: 500px;
     border-radius: 0 80px 50px 0;
   }
 
@@ -1271,14 +1262,17 @@
   }
 
   .documents__item,
-  .licenses__item,
-  .regulations__item {
+  .licenses__item {
     width: calc(25% - 15px);
     height: 250px;
+    padding: 20px 20px 6px;
   }
 
-  .documents__item-img,
-  .licenses__item-img,
+  .regulations__item {
+    width: calc(25% - 15px);
+    min-height: 250px;
+  }
+
   .regulations__item-link {
     padding: 20px;
   }
@@ -2451,7 +2445,8 @@
   }
 
   .project-video {
-    padding: 60px 0;
+    padding: 0 0 60px;
+    background: linear-gradient(to top, var(--black, #2E2D2D) calc(50% + 30px), transparent calc(50% + 30px));
   }
 
   .project-video__inner {
@@ -3059,7 +3054,7 @@
   .documents__item,
   .licenses__item,
   .regulations__item {
-    width: calc(50% - 12px);
+    width: calc(50% - 6px);
   }
 
   .licenses__item {
