--- a/app/scss/pages/index.scss
+++ b/app/scss/pages/index.scss
@@ -919,12 +919,14 @@
     position: relative;
     border-radius: 30px 30px 30px 0;
     overflow: hidden;
+    height: 500px;
 
     &-img {
       width: 100%;
       height: 100%;
       aspect-ratio: 1170/500;
       object-fit: cover;
+      object-position: center;
     }
 
     &-content {
@@ -1393,7 +1395,7 @@
   &__form {
     display: flex;
     flex-direction: column;
-    gap: 30px;  
+    gap: 30px;
 
     &-row {
       display: flex;
@@ -1481,6 +1483,7 @@
       object-fit: cover;
       stroke: var(--grey, #A7A7A7);
       stroke-width: 2px;
+      flex-shrink: 0;
     }
 
     &-body {
