--- a/app/scss/pages/reviews.scss
+++ b/app/scss/pages/reviews.scss
@@ -58,12 +58,14 @@
       right: 0;
       border-radius: 0 85px 60px 0;
       width: 454px;
-      height: 436px;
+      height: 476px;
     }
 
     &__form {
+      flex-direction: row;
       align-items: center;
       flex-wrap: wrap;
+      gap: 20px;
       max-width: 710px;
     }
 
