--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1303,7 +1303,6 @@ input[type=radio] + label::before {
 #wheel .modal__box {
   width: 570px;
   height: fit-content;
-  min-height: 450px;
   padding: 40px;
   overflow: visible;
   gap: unset;
@@ -1313,9 +1312,8 @@ input[type=radio] + label::before {
 #wheel .modal__content {
   display: flex;
   justify-content: space-between;
-  position: absolute;
-  bottom: -90px;
   width: 100%;
+  grid-row: 2/3;
 }
 #wheel .modal__content button {
   background: var(--yellow, #FFB628);
@@ -3763,15 +3761,19 @@ input[type=radio] + label::before {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  aspect-ratio: 570/570;
 }
 .works__item:hover .works__content-body {
   max-height: 100vh;
-  transition: all 0.5s ease-out;
+  transition: all 0.5s ease;
+}
+.works__item:hover .works__content {
+  gap: 20px;
 }
 .works__content {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 0;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -3780,7 +3782,7 @@ input[type=radio] + label::before {
   background: var(--white, #fff);
   border-radius: 0 30px 0 0;
   padding: 30px 30px 0 0;
-  transition: all 0.2s ease-out;
+  transition: all 0.2s ease;
 }
 .works__content::before {
   content: "";
@@ -5844,7 +5846,7 @@ input[type=radio] + label::before {
     border-radius: 20px;
   }
   .callback__img {
-    width: 271px;
+    width: 317px;
     right: 20px;
   }
   .callback__input {
@@ -5980,6 +5982,9 @@ input[type=radio] + label::before {
   .works__items {
     gap: 20px;
     margin-bottom: 30px;
+  }
+  .works__item {
+    width: calc(50% - 10px);
   }
   .statement__inner {
     gap: 20px;
@@ -6706,7 +6711,7 @@ input[type=radio] + label::before {
   .contacts__info-items {
     gap: 20px;
   }
-  .map {
+  #map {
     height: 470px;
   }
   /* projection */
@@ -7019,6 +7024,7 @@ input[type=radio] + label::before {
   }
   .built__item-content {
     max-width: 318px;
+    margin-right: 40px;
   }
   .built__item-content::after {
     bottom: 53px;
@@ -7219,6 +7225,7 @@ input[type=radio] + label::before {
   .vacancies__items {
     display: flex;
     flex-direction: column;
+    gap: 40px;
   }
   .vacancies__resume {
     max-width: 100%;
@@ -7232,9 +7239,10 @@ input[type=radio] + label::before {
   }
   .payment-methods__item {
     flex-direction: column;
+    gap: 10px;
   }
   .payment-methods__inner {
-    gap: 10px;
+    gap: 30px;
   }
   .payment-methods__item-content {
     max-width: 100%;
@@ -7479,8 +7487,9 @@ input[type=radio] + label::before {
     top: unset;
     transform: none;
     bottom: 40px;
+    margin-left: 20px;
   }
-  .map {
+  #map {
     height: 560px;
   }
   .about__items {
@@ -7761,7 +7770,8 @@ input[type=radio] + label::before {
     flex-direction: column;
     padding: 30px 30px 221px 30px;
   }
-  .discount__form {
+  .discount__form,
+  .discount__form-row {
     flex-direction: column;
   }
   .discount__img {
@@ -7870,12 +7880,37 @@ input[type=radio] + label::before {
   /* modal */
   #wheel .modal__box {
     width: 100%;
-    margin: 230px 0 0;
+    padding: 20px 10px;
+    margin: 130px 0 20px;
   }
   #spinner .modal__close-btn,
   #wheel .modal__close-btn {
     top: 15px;
     right: 15px;
+  }
+  #spinner .modal__close-btn,
+  #wheel .modal__close-btn {
+    top: -100px;
+    right: 10px;
+  }
+  #spinner .modal__close-btn svg,
+  #wheel .modal__close-btn svg {
+    fill: #2E2D2D;
+  }
+  #wheel .circle {
+    visibility: hidden;
+    opacity: 0;
+  }
+  #wheel .modal__content {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+  .deal-wheel {
+    --size: clamp(280px, 80vmin, 280px);
+  }
+  .spinner {
+    border-width: 10px;
   }
   .construction__item {
     width: 100%;
@@ -8033,6 +8068,13 @@ input[type=radio] + label::before {
   .about-page .case__slider .slick-arrow {
     top: calc(100% - (86% - 7px));
   }
+  .works__item-img {
+    height: 360px;
+    aspect-ratio: unset;
+  }
+  .works__content {
+    width: 80%;
+  }
 }
 @media (max-width: 360px) {
   .head__info-link h4 {
@@ -8052,6 +8094,9 @@ input[type=radio] + label::before {
   }
   .built__options-list.show {
     padding: 10px 30px 10px 10px;
+  }
+  .callback__img {
+    width: 100%;
   }
   .reviews-page .callback__picture {
     bottom: -17px;
