--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -528,7 +528,7 @@
   }
 
   .callback__img {
-    width: 271px;
+    width: 317px;
     right: 20px;
   }
 
@@ -702,6 +702,10 @@
   .works__items {
     gap: 20px;
     margin-bottom: 30px;
+  }
+
+  .works__item {
+    width: calc(50% - 10px);
   }
 
   .statement__inner {
@@ -1624,7 +1628,7 @@
     gap: 20px;
   }
 
-  .map {
+  #map {
     height: 470px;
   }
 
@@ -2023,6 +2027,7 @@
 
   .built__item-content {
     max-width: 318px;
+    margin-right: 40px;
   }
 
   .built__item-content::after {
@@ -2283,6 +2288,7 @@
   .vacancies__items {
     display: flex;
     flex-direction: column;
+    gap: 40px;
   }
 
   .vacancies__resume {
@@ -2301,10 +2307,11 @@
 
   .payment-methods__item {
     flex-direction: column;
+    gap: 10px;
   }
 
   .payment-methods__inner {
-    gap: 10px;
+    gap: 30px;
   }
 
   .payment-methods__item-content {
@@ -2613,9 +2620,10 @@
     top: unset;
     transform: none;
     bottom: 40px;
+    margin-left: 20px;
   }
 
-  .map {
+  #map {
     height: 560px;
   }
 
@@ -2972,7 +2980,8 @@
     padding: 30px 30px 221px 30px;
   }
 
-  .discount__form {
+  .discount__form,
+  .discount__form-row {
     flex-direction: column;
   }
 
@@ -3115,13 +3124,44 @@
   /* modal */
   #wheel .modal__box {
     width: 100%;
-    margin: 230px 0 0;
+    padding: 20px 10px;
+    margin: 130px 0 20px;
   }
 
   #spinner .modal__close-btn,
   #wheel .modal__close-btn {
     top: 15px;
     right: 15px;
+  }
+
+  #spinner .modal__close-btn,
+  #wheel .modal__close-btn {
+    top: -100px;
+    right: 10px;
+  }
+
+  #spinner .modal__close-btn svg,
+  #wheel .modal__close-btn svg {
+    fill: #2E2D2D;
+  }
+
+  #wheel .circle {
+    visibility: hidden;
+    opacity: 0;
+  }
+
+  #wheel .modal__content {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+
+  .deal-wheel {
+    --size: clamp(280px, 80vmin, 280px);
+  }
+
+  .spinner {
+    border-width: 10px;
   }
 
   .construction__item {
@@ -3329,6 +3369,15 @@
   .about-page .case__slider .slick-arrow {
     top: calc(100% - (86% - 7px));
   }
+
+  .works__item-img {
+    height: 360px;
+    aspect-ratio: unset;
+  }
+
+  .works__content {
+    width: 80%;
+  }
 }
 
 @media (max-width: 360px) {
@@ -3355,6 +3404,10 @@
 
   .built__options-list.show {
     padding: 10px 30px 10px 10px;
+  }
+
+  .callback__img {
+    width: 100%;
   }
 
   .reviews-page .callback__picture {
