--- a/app/scss/pages/works.scss
+++ b/app/scss/pages/works.scss
@@ -23,18 +23,23 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      aspect-ratio: 570/570;
     }
 
     &:hover .works__content-body {
       max-height: 100vh;
-      transition: all 0.5s ease-out;
+      transition: all 0.5s ease;
+    }
+
+    &:hover .works__content {
+      gap: 20px;
     }
   }
 
   &__content {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 0;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -43,7 +48,7 @@
     background: var(--white, #fff);
     border-radius: 0 30px 0 0;
     padding: 30px 30px 0 0;
-    transition: all 0.2s ease-out;
+    transition: all 0.2s ease;
 
     &::before {
       content: "";
