--- a/app/components/header.html
+++ b/app/components/header.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="libs/slick/slick.css">
   <link rel="stylesheet" type="text/css"
     href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css">
+  <link rel="stylesheet" href="libs/swiper/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/style.css">
   <!-- calculation input style -->
   <style>
