--- a/app/components/modal.html
+++ b/app/components/modal.html
@@ -194,6 +194,7 @@
 <script defer src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 <script defer src="https://api-maps.yandex.ru/2.1/?apikey=cd717dff-806d-44e1-a46d-04a850aa320f&load=Map&lang=ru_RU"
   type="text/javascript"></script>
+<script src="libs/swiper/swiper-bundle.min.js"></script>
 <script defer src="js/main.js"></script>
 <script>
   // wheel
