--- a/app/scss/pages/project.scss
+++ b/app/scss/pages/project.scss
@@ -249,13 +249,112 @@
 .plan {
   &__inner {
     display: flex;
-    gap: 30px;
   }
 
-  &__slider {
-    max-width: 970px;
+  .swiper-container {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
+
+  .slider__col {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 170px;
+    margin-right: 30px;
+    position: relative;
+  }
+
+  .slider__col .slider__image {
+    width: 100%;
+    height: 86px;
+    border-radius: 10px;
+    aspect-ratio: 170/86;
+  }
+
+  .slider__prev,
+  .slider__next {
+    cursor: pointer;
+    text-align: center;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid #EFEFEF;
+    border-radius: 8px;
+    position: relative;
+    top: unset;
+    bottom: unset;
+    right: unset;
+    left: unset;
+    margin: 0;
+    width: 100%;
+    color: #2E2D2D;
+    font-weight: 900;
+  }
+
+  .slider__prev::after {
+    font-size: 12px;
+    transform: rotate(90deg);
+  }
+
+  .slider__next::after {
+    font-size: 12px;
+    transform: rotate(90deg);
+  }
+
+  .slider__prev:focus,
+  .slider__next:focus {
+    outline: none;
+  }
+
+  .slider__thumbs {
+    height: calc(570px - 96px);
+  }
+
+  .slider__thumbs .slider__image {
+    transition: 0.25s;
+    opacity: 0.1;
+  }
+
+  .slider__thumbs .slider__image:hover {
+    opacity: 1;
+  }
+
+  .slider__thumbs .swiper-slide-thumb-active .slider__image {
+    opacity: 1;
+  }
+
+  .slider__images {
+    width: 100%;
+    height: 570px;
     border-radius: 30px;
     overflow: hidden;
+  }
+
+  .slider__images .slider__image img {
+    aspect-ratio: 970/570;
+    transition: 3s;
+  }
+
+  .slider__image {
+    width: 100%;
+    height: 100%;
+    border-radius: 30px;
+    overflow: hidden;
+  }
+
+  .slider__image img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
   }
 
   &__item {
@@ -266,7 +365,7 @@
     align-items: center;
     max-width: 970px;
     width: auto;
-    height: 570px;
+    height: 100%;
     color: var(--black, #2E2D2D);
 
     &-img {
@@ -305,52 +404,6 @@
         right: -30px;
         z-index: 2;
       }
-    }
-  }
-
-  &__list {
-    width: 170px;
-    height: 100%;
-
-    &-item {
-      border-radius: 8px;
-      background: var(--bg, #F9F9F9);
-      padding: 10px;
-      max-width: 170px;
-      min-width: 100%;
-      max-height: 86px;
-      margin-bottom: 10px;
-    }
-
-    &-img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      aspect-ratio: 150/66;
-      opacity: 0.1;
-    }
-
-    .slick-track {
-      max-width: 100%;
-    }
-
-    .slick-current .plan__list-img {
-      opacity: 1;
-    }
-
-    .slick-prev {
-      margin-bottom: 10px;
-    }
-
-    .slick-arrow {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      height: 40px;
-      border-radius: 8px;
-      border: 1px solid var(--grey2, #EFEFEF);
-      background: transparent;
     }
   }
 }
