--- a/app/scss/pages/work.scss
+++ b/app/scss/pages/work.scss
@@ -3,80 +3,113 @@
 
   &__content {
     display: flex;
-    gap: 30px;
     position: relative;
     margin-bottom: 60px;
-  }
 
-  &__slider {
-    max-width: 970px;
-    border-radius: 30px;
-    overflow: hidden;
-  }
-
-  &__item {
-    position: relative;
-    background: var(--bg, #F9F9F9);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 970px;
-    width: auto;
-    height: 570px;
-
-    &-img {
-      width: auto;
-      height: 100%;
-      object-fit: cover;
-    }
-  }
-
-  &__list {
-    width: 170px;
-    height: 100%;
-
-    &-item {
-      border-radius: 10px;
-      background: var(--bg, #F9F9F9);
-      min-width: 100%;
-      max-height: 86px;
-      margin-bottom: 10px;
-      overflow: hidden;
-
-      &.slick-current {
-        border: none !important;
-      }
-    }
-
-    &-img {
+    .swiper-container {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      overflow: hidden;
+    }
+
+    .slider__col {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      width: 170px;
+      margin-right: 30px;
+      position: relative;
+    }
+
+    .slider__col .slider__image {
+      width: 100%;
+      height: 86px;
+      border-radius: 10px;
       aspect-ratio: 170/86;
-      opacity: 0.1;
     }
 
-    .slick-track {
-      max-width: 100%;
+    .slider__prev,
+    .slider__next {
+      cursor: pointer;
+      text-align: center;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      border: 1px solid #EFEFEF;
+      border-radius: 8px;
+      position: relative;
+      top: unset;
+      bottom: unset;
+      right: unset;
+      left: unset;
+      margin: 0;
+      width: 100%;
+      color: #2E2D2D;
+      font-weight: 900;
     }
 
-    .slick-current .work__list-img {
+    .slider__prev::after {
+      font-size: 12px;
+      transform: rotate(90deg);
+    }
+
+    .slider__next::after {
+      font-size: 12px;
+      transform: rotate(90deg);
+    }
+
+    .slider__prev:focus,
+    .slider__next:focus {
+      outline: none;
+    }
+
+    .slider__thumbs {
+      height: calc(570px - 96px);
+    }
+
+    .slider__thumbs .slider__image {
+      transition: 0.25s;
+      opacity: 0.5;
+    }
+
+    .slider__thumbs .slider__image:hover {
       opacity: 1;
     }
 
-    .slick-prev {
-      margin-bottom: 10px;
+    .slider__thumbs .swiper-slide-thumb-active .slider__image {
+      opacity: 1;
     }
 
-    .slick-arrow {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    .slider__images {
       width: 100%;
-      height: 40px;
-      border-radius: 8px;
-      border: 1px solid var(--grey2, #EFEFEF);
-      background: transparent;
+      height: 570px;
+      border-radius: 30px;
+      overflow: hidden;
+    }
+
+    .slider__images .slider__image img {
+      aspect-ratio: 970/570;
+      transition: 3s;
+    }
+
+    .slider__image {
+      width: 100%;
+      height: 100%;
+      border-radius: 30px;
+      overflow: hidden;
+    }
+
+    .slider__image img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      -o-object-fit: cover;
+      object-fit: cover;
     }
   }
 
@@ -85,6 +118,7 @@
     top: 50%;
     transform: translateY(-50%);
     right: 0;
+    z-index: 2;
     padding: 30px 0 30px 30px;
     border-radius: 30px 0 0 30px;
     background: var(--white, #fff);
